app:    migrated to Angular 14;    included primeng to use p-table;    included "codigo postal" to seek "morada";
service:
   included endpoint to seek "morada";
